# swh-perfecthash

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  PKG-INFO  README.rst  build_cmph.sh  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  setup.py  swh-perfecthash_0.1.1.orig.tar.gz.delta  swh-perfecthash_0.1.1.orig.tar.gz.id  swh-perfecthash_0.1.2.orig.tar.gz.delta  swh-perfecthash_0.1.2.orig.tar.gz.id  swh-perfecthash_1.0.0.orig.tar.gz.delta  swh-perfecthash_1.0.0.orig.tar.gz.id  swh-perfecthash_1.1.0.orig.tar.gz.delta  swh-perfecthash_1.1.0.orig.tar.gz.id  swh-perfecthash_1.2.0.orig.tar.gz.delta  swh-perfecthash_1.2.0.orig.tar.gz.id  swh-perfecthash_1.3.0.orig.tar.gz.delta  swh-perfecthash_1.3.0.orig.tar.gz.id  tox.ini
debian/: changelog  control  copyright  rules
docs/: format.rst  index.rst
src/_shard/: bindings.cpp  shard.c  shard.h
src/swh/shard/: cli.py
src/swh/shard/tests/: test_cli.py  test_shard.py
swh/perfecthash/: Makefile  __init__.py  build.py  hash.c  hash.h  shard.c
swh/perfecthash/tests/: test_hash.py
swh/shard/: Makefile  __init__.py  build.py  shard.c  test_shard.cpp
swh/shard/tests/: test_shard.py
